--- a/Lab Assignment 3 - Topic Modeling/Topic Modeling.ipynb
+++ b/Lab Assignment 3 - Topic Modeling/Topic Modeling.ipynb
@@ -10,8 +10,8 @@
     "**Muhamed Hisham bin Mohamed Bahurudeen (IS01081947)**  \n",
     "**Muhammad Afiq Fikri Bin Ahmad Sabri (IS01082516)**\n",
     "\n",
-    "*The coherence score of 0.561 indicates that the topics generated are moderately interpretable.*  \n",
-    "*This suggests the model identified some meaningful patterns, though there is still room for improvement.*"
+    "*The LDA model achieved a coherence score of 0.561, indicating that the topics are reasonably interpretable.*  \n",
+    "*This suggests that the model was able to uncover some meaningful themes within the dataset, though further refinement could enhance topic clarity.*" 
    ]
   },
   {
